# Ardelka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: Ardelka.h
Engine/src/: Ardelkapch.h
Engine/src/Config/: Config.h  ConfigurationManager.cpp  ConfigurationManager.h
Engine/src/Core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Engine/src/Graphics/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferManager.cpp  CommandBufferManager.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsFactory.cpp  GraphicsFactory.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  RendererType.h  Sampler.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Vertex.h  VulkanContext.cpp  VulkanContext.h
Engine/src/Graphics/Renderers/Vulkan/: FrameBuffer.cpp  FrameBuffer.h  RenderPass.cpp  SwapChain.cpp  SwapChain.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanMesh.cpp  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h
GameEngine/src/: Application.cpp  Application.h  Camera.h  Component.h  Editor.cpp  Editor.h  EditorLayer.h  EditorStyle.cpp  Engine.cpp  Engine.h  FBXLoader.cpp  FBXLoader.h  GameLayer.h  GameObject.cpp  GameObject.h  Layer.h  Light.h  LightComponent.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.h  Scripting.cpp  Shader.cpp  Shader.h  TestObject.cpp  TestObject.h  Texture.cpp  Texture.h  Transform.h  Window.cpp  Window.h  main.cpp
Resources/Shaders/: common.glsl  fragment_shader.glsl  lighting.glsl  pbr_fragment.glsl  pbr_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_shader.glsl
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
resources/shaders/: fragment_shader.glsl
src/: Application.h  Camera.h  Component.h  Editor.cpp  Editor.h  EditorStyle.cpp  EditorStyle.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Scripting.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  Window.cpp  Window.h  main.cpp
